Fixed the vertical align of the label, switch and checkbox of the form.

--- a/scss/form/_checkbox.scss
+++ b/scss/form/_checkbox.scss
@@ -28,6 +28,7 @@ $siimple-checkbox-label-after-height: 4px;
   margin-right: $siimple-checkbox-margin-left-right;
   margin-top: $siimple-checkbox-margin-top-bottom;
   margin-bottom: $siimple-checkbox-margin-top-bottom;
+  vertical-align: top;
 
   & label {
     width: $siimple-checkbox-label-size;
