--- a/scss/form/_switch.scss
+++ b/scss/form/_switch.scss
@@ -33,6 +33,7 @@ $siimple-switch-margin-top-bottom: 7px;
     top: $siimple-switch-margin-top-bottom;
     bottom: $siimple-switch-margin-top-bottom;
   }
+  vertical-align: top;
 
   //Label style -> circle
   & label {
